--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <div>Modification from the clone</div>
     <div>Another modification from the clone</div>
+    Modif from Github directly
 </body>
 </html>
